@@ -3,6 +3,7 @@
 <head>
    <title>Timeline</title>
    <script type="text/javascript" src="gfeedline.js"></script>
+   <script type="text/javascript" src="readmore.js"></script>
    <script type="text/javascript" src="scrollsmoothly.js"></script>
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
            type="text/javascript"></script>
