@@ -10,7 +10,7 @@
       <a href='gfeedline://twitter.com/$user_name/status/$id'
          style='color: #$user_color;' class='username' title='$user_name'
          data-user='$user_name' data-fullname='$full_name'>$full_name</a>
-      <span class='screenname'>@$user_name<span>
+      <span class='screenname'>$user_name2<span>
       $protected
     </div>
     <div class='body' dir='auto'>$status_body</div>
